--- a/atv-formlario.html
+++ b/atv-formlario.html
@@ -4,125 +4,105 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Formulário</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <form
-      id="meuFormulario"
-      method="post"
-      action="/submit_form"
-      onsubmit="processarDados(event)"
-    >
-      <hr />
-      <h2>Formulário de Cadastro</h2>
-      <br />
-      <hr />
-
-      <!--Campo para inserir o nome completo-->
-      <label for="" nome>Nome Completo:</label>
-      <input
-        type="texte"
-        id="nome"
-        name="nome"
-        placeholder="Digite seu nome completo"
-        required
-      />
-      <br /><br />
-      <hr />
-
-      <!--Campo para inserir o e-mail-->
-      <label for="email">Email:</label>
-      <input
-        type="email"
-        id="email"
-        name="email"
-        placeholder="Insira seu endereço e-mail"
-        required
-      />
-      <br /><br />
-      <hr />
-
-      <!--Campo para inserir a senha-->
-      <label for="senha">Senha:</label>
-      <input type="password" id="senha" name="senha" required minlength="8" />
-      <br /><br />
-      <hr />
-
-      <!--Campo para confirmação da senha-->
-      <label for="confirmSenha">Confirme sua senha:</label>
-      <input
-        type="password"
-        id="confirmSenha"
-        name="confirmSenha"
-        required
-        minlength="8"
-      />
-      <br /><br />
-      <hr />
-
-      <!--Campo para selecionar o gênero-->
-      <label>Sexo:</label>
-      <label
-        ><input type="radio" name="Sexo" value="masculino" />Masculino</label
+    <div class="container">
+      <form
+        id="meuFormulario"
+        method="post"
+        action="/submit_form"
+        onsubmit="processarDados(event)"
       >
-      <label><input type="radio" name="Sexo" value="feminino" />Feminino</label>
-      <label><input type="radio" name="Sexo" value="outro" />Outro</label>
-      <label
-        ><input type="radio" name="Sexo" value="naoinformar" />Prefiro não
-        informar</label
-      ><br /><br />
-      <hr />
+        <div class="header">
+          <h2>FORMULÁRIO DE CADASTRO</h2>
+          <br />
+        </div>
+        <!--Campo para inserir o nome completo-->
+        <label for="nome" nome>Nome Completo:</label>
+        <input
+          type="text"
+          id="nome"
+          name="nome"
+          placeholder="Digite seu nome completo"
+          required
+        />
+        <br /><br />
 
-      <!--Checkbox para selecionar seus interesses-->
-      <label>Interesses:</label>
-      <label
-        ><input
-          type="checkbox"
-          name="Interesses"
-          value="esportes"
-        />Esportes</label
-      >
-      <label
-        ><input type="checkbox" name="Interesses" value="musica" />Música</label
-      >
-      <label
-        ><input
-          type="checkbox"
-          name="Interesses"
-          value="tecnologia"
-        />Tecnologia</label
-      >
-      <br /><br />
-      <hr />
+        <!--Campo para inserir o e-mail-->
+        <label for="email">Email:</label>
+        <input
+          type="email"
+          id="email"
+          name="email"
+          placeholder="Insira seu endereço e-mail"
+          required
+        />
+        <br /><br />
 
-      <!--Campo para adicionar um arquivo img-->
-      <label for="foto">Adicione uma foto de perfil</label>
-      <input type="file" id="foto" name="foto" accept="image/*" />
-      <br /><br />
-      <hr />
+        <!--Campo para inserir a senha-->
+        <label for="senha">Senha:</label>
+        <input type="password" id="senha" name="senha" required minlength="8" />
+        <br /><br />
 
-      <!--Campo para selecionar a nacionalidade-->
-      <label for="pais">Selecione seu país de origem:</label>
-      <select id="pais" name="pais">
-        <option value="">Selecione</option>
-        <option value="arg">Argentina</option>
-        <option value="bo">Bolívia</option>
-        <option value="br">Brasil</option>
-        <option value="cl">Chile</option>
-        <option value="co">Colômbia</option>
-        <option value="ec">Equador</option>
-        <option value="gy">Guiana</option>
-        <option value="py">Paraguai</option>
-        <option value="pe">Peru</option>
-        <option value="sr">Suriname</option>
-        <option value="uy">Uruguai</option>
-        <option value="ve">Venezuela</option>
-      </select>
-      <br /><br />
-      <hr />
+        <!--Campo para confirmação da senha-->
+        <label for="confirmSenha">Confirme sua senha:</label>
+        <input
+          type="password"
+          id="confirmSenha"
+          name="confirmSenha"
+          required
+          minlength="8"
+        />
+        <br /><br />
 
-      <input type="submit" value="Enviar" />
-      <input type="reset" value="Limpar" />
-      <script src="script.js"></script>
-    </form>
+        <!--Campo para selecionar o gênero-->
+        <div class="genero">
+          <label>Sexo:</label>
+          <label><input type="radio" name="sexo" value="masculino" />Masculino</label>
+          <label><input type="radio" name="sexo" value="feminino" />Feminino</label>
+          <label><input type="radio" name="sexo" value="outro" />Outro</label>
+          <label><input type="radio" name="sexo" value="naoinformar" />Prefiro não informar</label>
+          <div id="campoOutroGenero" style="display: none;">
+            <label for="outroGenero">Informe seu gênero:</label>
+            <input type="text" id="outroGenero" name="outroGenero" placeholder="Digite seu gênero" />
+          </div>
+          <br /><br />
+        </div>
+        <!--Checkbox para selecionar seus interesses-->
+        <label>Interesses:</label>
+          <label><input type="checkbox" name="interesses[]" value="esportes" />Esportes</label>
+          <label><input type="checkbox" name="interesses[]" value="musica" />Música</label>
+          <label><input type="checkbox" name="interesses[]" value="tecnologia" />Tecnologia</label>
+        <br /><br />
+
+        <!--Campo para adicionar um arquivo img-->
+        <label for="foto">Adicione uma foto de perfil</label>
+        <input type="file" id="foto" name="foto" accept="image/*" />
+        <br /><br />
+
+        <!--Campo para selecionar a nacionalidade-->
+        <label for="pais">Selecione seu país de origem:</label>
+        <select id="pais" name="pais">
+          <option value="">Selecione</option>
+          <option value="arg">Argentina</option>
+          <option value="bo">Bolívia</option>
+          <option value="br">Brasil</option>
+          <option value="cl">Chile</option>
+          <option value="co">Colômbia</option>
+          <option value="ec">Equador</option>
+          <option value="gy">Guiana</option>
+          <option value="py">Paraguai</option>
+          <option value="pe">Peru</option>
+          <option value="sr">Suriname</option>
+          <option value="uy">Uruguai</option>
+          <option value="ve">Venezuela</option>
+        </select>
+        <br /><br />
+        <input type="submit" value="Enviar" />
+        <input type="reset" value="Limpar" />
+      </form>
+    </div>
+    <script src="script.js"></script>
   </body>
 </html>
